# control-flag

./: .gitignore  CMakeLists.txt  LICENSE  NOTICE.txt  README.md  control-flag.sln
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: controlflag_cmake.yml  controlflag_cpplint.yml  linux_controlflag_cmake.yml  linux_controlflag_cpplint.yml  macos_controlflag_cmake.yml  macos_controlflag_cpplint.yml
github/: c1000.txt  collect_repo_urls.py  cpp100.txt  deduplicate.py  download_repos.py  java10.txt  java1000.txt  php100.txt
quick_start/: .gitignore  test1_c.sh  test2_verilog.sh  test3_cpp.sh
scripts/: mine_patterns.sh  scan_for_anomalies.sh
src/: CMakeLists.txt  autocorrect.cpp  cf_dump_code_blocks.cpp  cf_file_scanner.cpp  common_util.cpp  common_util.h  exception.h  parser.h  result_processing.cpp  train_and_scan_util.cpp  train_and_scan_util.h  tree_abstraction.cpp  tree_abstraction.h  trie.cpp  trie.h
src/tree-sitter/: .gitignore  CMakeLists.txt
src/tree-sitter/vcxproj/: tree-sitter-c.vcxproj  tree-sitter-verilog.vcxproj  tree-sitter.vcxproj
src/windows/: getopt.h  unistd.h
src/windows/sys/: time.h
tests/: CMakeLists.txt  test_c_parser.cpp  test_common.h  test_cpp_parser.cpp  test_dump_conditional_exprs.cpp  test_expression_compactor.cpp  test_php_parser.cpp  test_trie.cpp  test_verilog_parser.cpp
vcxproj/: cf_base.vcxproj  cf_dump_code_blocks.vcxproj  cf_file_scanner.vcxproj
